fix font buttons on mobile, make more responsive to touch

--- a/assets/css/notes.scss
+++ b/assets/css/notes.scss
@@ -297,6 +297,12 @@ body[data-speaker-layout="notes-only"] #speaker-controls {
 /* Custom edits */
 /* ------------ */
 
+/* https://developers.google.com/web/updates/2013/12/300ms-tap-delay-gone-away */
+// html {
+//   -ms-touch-action: manipulation;
+//   touch-action: manipulation;
+// }
+
 /* Notes body should scroll while time is still visible */
 #speaker-controls {
   display: flex;
@@ -404,15 +410,21 @@ body[data-speaker-layout="wide"] {
 /* Font control buttons */
 .speaker-controls-notes + .fontsize-controls {
   display: flex;
+  align-items: center;
+  font-size: 16px;
+  padding-top: 6px;
+  min-height: 37px;
+  box-sizing: border-box;
 
   button {
+    display: inline-block;
     padding: 0.5rem;
     border: none;
     background: rgba(220, 220, 220, 1);
     width: 50%;
     cursor: pointer;
-    margin: 6px 0.25rem 0;
-    min-height: 2rem;
+    margin: 0 0.25rem 0;
+    user-select: none;
   }
 }
 
